[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/eyelet.png" type="Texture" id=1]
[ext_resource path="res://MachineObjects/Scripts/MachineObject.gd" type="Script" id=2]
[ext_resource path="res://Tools/RedOverlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tools/RotateButton.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 14.1256

[sub_resource type="CircleShape2D" id=3]
radius = 14.2505

[node name="Eyelet" type="RigidBody2D"]
input_pickable = true
mode = 1
script = ExtResource( 2 )
displayName = "Eyelet"
isStatic = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.125, -1.75 )
shape = SubResource( 2 )

[node name="CheckArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckArea"]
position = Vector2( 0.125, -1.875 )
shape = SubResource( 3 )

[node name="RedOverlay" parent="." instance=ExtResource( 3 )]
visible = true
margin_left = -14.0
margin_right = 14.0
margin_bottom = 12.0

[node name="RotateButton" parent="." instance=ExtResource( 4 )]
margin_left = -42.511
margin_top = -13.375
margin_right = -14.511
margin_bottom = 10.625
[connection signal="input_event" from="." to="." method="_on_MachineObject_input_event"]
[connection signal="area_entered" from="CheckArea" to="." method="_on_CheckArea_area_entered"]
[connection signal="area_exited" from="CheckArea" to="." method="_on_CheckArea_area_exited"]
[connection signal="button_down" from="RotateButton" to="." method="_on_RotateButton_button_down"]
[connection signal="button_up" from="RotateButton" to="." method="_on_RotateButton_button_up"]
